--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <!-- Primary Meta Tags -->
-  <title>Bit Lunch</title>
-  <meta name="title" content="Bit Lunch ">
-  <meta name="description" content="La mayor carta virtual de comida">
+  <title>ZOFRI</title>
+  <meta name="title" content="ZOFRI ">
+  <meta name="description" content="Zona Franca de Iquique CHILE">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="webapp">
-  <meta property="og:url" content="https://bitlunch.buckapi.us/">
-  <meta property="og:title" content="Bit Lunch">
-  <meta property="og:description" content="La mayor carta virtual de comida">
-  <meta property="og:image" content="https://bitlunch.buckapi.us/assets/assetsrest/og.jpg">
+  <meta property="og:url" content="https://zofri.buckapi.us/">
+  <meta property="og:title" content="ZOFRI">
+  <meta property="og:description" content="Zona Franca de Iquique CHILE">
+  <meta property="og:image" content="https://zofri.buckapi.us/assets/og.jpg">
 
 
   <base href="/">
