--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- nouislider CSS -->
     <link href="assets/assetsrest/vendor/nouislider/nouislider.min.css" rel="stylesheet">
 
